handson lecture 4. final

--- a/handsOn_lecture04_linear-regression-part1/lecture04_linear-regression-part-1.ipynb
+++ b/handsOn_lecture04_linear-regression-part1/lecture04_linear-regression-part-1.ipynb
@@ -223,12 +223,7 @@
     "$$\n",
     "\n",
     "Note that $\\vec{w}^\\top (\\Phi^\\top \\vec{t}) = (\\Phi^\\top\\vec{t})^\\top \\vec{w} = \\vec{t}^\\top \\Phi \\vec{w}$. So, the above simplifies to\n",
-    "$$ \\frac{1}{2} \\left(\\vec{w}^\\top \\Phi^\\top \\Phi \\vec{w} - 2\\vec{w}^\\top \\Phi^\\top \\vec{t} + \\vec{t}^\\top \\vec{t}\\right).$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "Rewrite $E$ as a sum of three matrix-vector products. <i>Hints:</i>\n",
-    "* $\\|\\vec{x}\\|_2^2 = \\vec{x}^\\top \\vec{x}$"
+    "$$ \\frac{1}{2} \\left(\\vec{w}^\\top \\Phi^\\top \\Phi \\vec{w} - 2\\vec{w}^\\top \\Phi^\\top \\vec{t} + \\vec{t}^\\top \\vec{t}\\right).$$"
    ]
   },
   {
@@ -277,12 +272,7 @@
     "* Finally, $t^\\top t$ is constant with respect to $\\vec{w}$.\n",
     "\n",
     "So,\n",
-    "$\\nabla_{\\vec{w}} E(\\vec{w}) = (\\Phi^\\top\\Phi)\\vec{w} - \\Phi^\\top t$\n",
-    "\n",
-    "\n",
-    "Compute the gradient $\\nabla_\\vec{w} E(\\vec{w})$ with matrix calculus. <i>Hints</i>:\n",
-    "* $\\nabla_\\vec{x} (\\vec{x}^\\top A \\vec{x}) = (A + A^\\top) \\vec{x}$  <i> (Challenge: prove this!) </i>\n",
-    "* $\\nabla_\\vec{x} (\\vec{x}^\\top \\vec{y}) = \\nabla_\\vec{x} (\\vec{y}^\\top\\vec{x}) = \\vec{y}$"
+    "$\\nabla_{\\vec{w}} E(\\vec{w}) = (\\Phi^\\top\\Phi)\\vec{w} - \\Phi^\\top t$"
    ]
   },
   {
