fix lecture05 typos

--- a/lecture05_linear-regression-part2/lecture05_final_linear-regression-part-2.ipynb
+++ b/lecture05_linear-regression-part2/lecture05_final_linear-regression-part-2.ipynb
@@ -37,12 +37,10 @@
     }
    },
    "source": [
-    "# EECS 545:  Machine Learning\n",
+    "# EECS 445:  Machine Learning\n",
     "## Lecture 05:  Linear Regression II\n",
-    "* Instructor:  **Jacob Abernethy**\n",
-    "* Date:  January 25, 2015\n",
-    "\n",
-    "*Lecture Exposition Credit: Benjamin Bray and Zhe Du*"
+    "* Instructor:  Jacob Abernethy and Jia Deng\n",
+    "* Date:  September 21, 2016"
    ]
   },
   {
@@ -1057,9 +1055,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
