--- a/lecture05_linear-regression-part2/lecture05_final_linear-regression-part-2.ipynb
+++ b/lecture05_linear-regression-part2/lecture05_final_linear-regression-part-2.ipynb
@@ -37,7 +37,7 @@
     }
    },
    "source": [
-    "# EECS 545:  Machine Learning\n",
+    "# EECS 445: Introduction to Machine Learning\n",
     "## Lecture 05:  Linear Regression II\n",
     "* Instructor:  **Jacob Abernethy** and **Jia Deng**\n",
     "* Date:  September 21, 2016\n",
