--- a/lecture06_logistic_regression/lecture06_logistic-regression.ipynb
+++ b/lecture06_logistic_regression/lecture06_logistic-regression.ipynb
@@ -47,7 +47,7 @@
    },
    "source": [
     "# EECS 445: Introduction to Machine Learning\n",
-    "## Lecture 07:  Logistic Regression \n",
+    "## Lecture 06:  Logistic Regression \n",
     "* Instructor:  **Jacob Abernethy** and **Jia Deng**\n",
     "* Date:  September 26, 2016\n",
     "\n",
@@ -831,6 +831,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [Root]",
