--- a/discussion03_linear-regression-naive-bayes/discussion03_linear-regression-naive-bayes.ipynb
+++ b/discussion03_linear-regression-naive-bayes/discussion03_linear-regression-naive-bayes.ipynb
@@ -262,9 +262,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
