fix to title of handson

--- a/handsOn_lecture08_SVM/HandsOn08_naive_bayes_and_intro_to_SVM.ipynb
+++ b/handsOn_lecture08_SVM/HandsOn08_naive_bayes_and_intro_to_SVM.ipynb
@@ -35,7 +35,7 @@
    },
    "source": [
     "# EECS 445:  Machine Learning\n",
-    "## Hands On 06:  Linear Regression II\n",
+    "## Hands On 08:  More on Naive Bayes (saving SVM for later...)\n",
     "* Instructor:  **Ben Bray, Chansoo Lee, Jia Deng, Jake Abernethy**\n",
     "* Date:  October 5, 2016"
    ]
