final updates to monday lecture

--- a/lecture10_bias-variance-tradeoff/lecture10_bias-variance-tradeoff.ipynb
+++ b/lecture10_bias-variance-tradeoff/lecture10_bias-variance-tradeoff.ipynb
@@ -1132,7 +1132,7 @@
     "## Let's return to fitting polynomials\n",
     "\n",
     "* Here we generate some samples $x,y$, with $y = \\sin(2\\pi x)$\n",
-    "* We then fit a *degree-0$ polynomial (i.e. a constant function) to the samples "
+    "* We then fit a *degree-0* polynomial (i.e. a constant function) to the samples "
    ]
   },
   {
@@ -1140,7 +1140,7 @@
    "execution_count": 22,
    "metadata": {
     "collapsed": false,
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1489,7 +1489,7 @@
    "source": [
     "$$\\mathbb{E}[(y - \\hat{f})^2] = \\underbrace{{\\sigma^2}}_\\text{irreducible error} + \\underbrace{{\\text{Var}[\\hat{f}]}}_\\text{Variance} + \\underbrace{{\\mathbb{E}[f - \\mathbb{E}_S[\\hat{f}]]}^2}_{\\text{Bias}^2}$$\n",
     "* Blue curve: true $f$\n",
-    "* Black curve: $\\hat f$, average predicted values of $y$\n",
+    "* Black curve: $\\hat f$, average *prediction* (of the value of $y$)\n",
     "* Yellow is error due to **Bias**, Red/Pink is error due to **Variance**"
    ]
   },
@@ -1687,7 +1687,7 @@
     }
    },
    "source": [
-    "### Regularization (Changing $\\lambda$)\n",
+    "### Regularization (Changing $\\lambda$ or $C$)\n",
     "\n",
     "Regularization is designed to impose simplicity by adding a penalty term that depends on the charactistics of the parameters.\n",
     "\n",
