edits to lec 11

--- a/lecture11_info-theory-decision-trees/lecture11_info-theory-decision-trees.ipynb
+++ b/lecture11_info-theory-decision-trees/lecture11_info-theory-decision-trees.ipynb
@@ -563,207 +563,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Here we read in the precomputed data.\n",
-    "\n",
-    "import csv, math;\n",
-    "\n",
-    "# file paths\n",
-    "unigram_path = \"collocations/data/crime-and-punishment.txt.unigrams\";\n",
-    "bigram_path = \"collocations/data/crime-and-punishment.txt.bigrams\";\n",
-    "\n",
-    "# read unigrams into dict\n",
-    "with open(unigram_path) as f:\n",
-    "    reader = csv.reader(f);\n",
-    "    unigrams = { row[0] : int(row[1]) for row in csv.reader(f)};\n",
-    "    \n",
-    "# read bigrams into dict\n",
-    "with open(bigram_path) as f:\n",
-    "    reader = csv.reader(f);\n",
-    "    bigrams = { (row[0],row[1]) : int(row[2]) for row in csv.reader(f)};\n",
-    "     \n",
-    "# pretty print table\n",
-    "class PrettyTable(object):\n",
-    "        def __init__(self, data, head1, head2, floats=False):\n",
-    "            table = \"<table>\"      \n",
-    "            \n",
-    "            table += \"<tr><th>%s</th>\" % head1;\n",
-    "            for bigram, count in data:\n",
-    "                table +=\"<td>%s %s</td>\" %bigram\n",
-    "            table += \"</tr>\"\n",
-    "            \n",
-    "            table += \"<tr><th>%s</th>\" % head2;\n",
-    "            for bigram, count in data:\n",
-    "                if floats: count = \"%0.2f\" % count;\n",
-    "                else: count = \"%d\" % count;                \n",
-    "                table +=\"<td>%s</td>\" % count\n",
-    "            table += \"</tr>\"\n",
-    "            table += \"</table>\"\n",
-    "            self.table = table;            \n",
-    "        \n",
-    "        def _repr_html_(self):\n",
-    "            return self.table;        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# The following code sorts bigrams by pointwise mutual information:\n",
-    "\n",
-    "# compute pmi\n",
-    "pmi_bigrams = [];\n",
-    "\n",
-    "for w1,w2 in bigrams:\n",
-    "    # compute pmi\n",
-    "    actual = bigrams[(w1,w2)];\n",
-    "    expected = unigrams[w1] * unigrams[w2];\n",
-    "    pmi = math.log( actual / expected );\n",
-    "    # filter out infrequent bigrams\n",
-    "    if actual < 15: continue;\n",
-    "    pmi_bigrams.append( ((w1, w2), pmi) );\n",
-    "\n",
-    "# sort pmi\n",
-    "pmi_sorted = sorted(pmi_bigrams, key=lambda x: x[1], reverse=True);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Pointwise Mutual Information: Example\n",
-    "\n",
-    "- Here are the most frequent bigrams--these aren't collocations!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><th>Bigram</th><td>in the</td><td>of the</td><td>he was</td><td>he had</td><td>to the</td><td>on the</td><td>i am</td><td>at the</td><td>it was</td><td>that he</td></tr><tr><th>Count</th><td>778</td><td>598</td><td>505</td><td>498</td><td>488</td><td>479</td><td>460</td><td>459</td><td>413</td><td>335</td></tr></table>"
-      ],
-      "text/plain": [
-       "<__main__.PrettyTable_ at 0x996c400>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bigrams_sorted = sorted(bigrams.items(), key=lambda x: x[1], reverse=True);\n",
-    "PrettyTable(bigrams_sorted[:10], \"Bigram\", \"Count\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- Sorting bigrams by PMI, we first get names..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><th>Collocation</th><td>andrey semyonovitch</td><td>nikodim fomitch</td><td>hay market</td><td>dmitri prokofitch</td><td>honoured sir</td><td>sofya semyonovna</td><td>marfa petrovna</td><td>police station</td><td>rodion romanovitch</td></tr><tr><th>PMI</th><td>-3.18</td><td>-3.18</td><td>-3.48</td><td>-3.87</td><td>-4.27</td><td>-4.33</td><td>-4.37</td><td>-4.48</td><td>-4.57</td></tr></table>"
-      ],
-      "text/plain": [
-       "<__main__.PrettyTable_ at 0x996ce48>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PrettyTable(pmi_sorted[1:10], \"Collocation\", \"PMI\", floats=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- ...then more interesting collocations!  This is much more useful than sorting by frequency alone."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><th>Collocation</th><td>thank god</td><td>police office</td><td>great deal</td><td>ten minutes</td><td>good heavens</td><td>thousand roubles</td><td>katerina ivanovnas</td><td>old womans</td></tr><tr><th>PMI</th><td>-5.20</td><td>-5.23</td><td>-5.28</td><td>-5.40</td><td>-5.51</td><td>-5.54</td><td>-5.57</td><td>-5.57</td></tr></table>"
-      ],
-      "text/plain": [
-       "<__main__.PrettyTable_ at 0x996cba8>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PrettyTable(pmi_sorted[12:20], \"Collocation\", \"PMI\", floats=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -825,29 +624,11 @@
     }
    },
    "source": [
-    "### Interpreting Learned Models of ML algorithms\n",
-    "\n",
-    "- Many of the more sophisticated ML algorithms are often hard to interpret. Some reasons for this include: \n",
-    " - Complicated or High-Dimensional Mainfolds or Decision Boundaries \n",
-    " - Uncalibrated Probabilities (Prediction Probabilities which cannot be interpreted as confidence levels)\n",
-    " - Engineered Features that do not have some obvious meaning\n",
-    " - Hyperparameters whose effects are not fully understood\n",
-    " - ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Lecture Overview\n",
+    "### Decision Trees Overview\n",
     "\n",
     "In this lecture we will:\n",
     "- Look at a class of ML algorithms that are particularly good in the sense that the learned model is in general interpretable. (***Decision Trees***)\n",
-    "- Consider some \"meta-algorithms\" that combine learned models (***Ensemble Learning***), particularly for:\n",
+    "- **Later**: some \"meta-algorithms\" that combine learned models (***Ensemble Learning***), particularly for:\n",
     "    - Improving stability and reducing variance (***Bagging***) and,\n",
     "    - Learning from some set of \"weak\" models. (***Boosting***)"
    ]
@@ -915,7 +696,7 @@
     "- As the name suggests, the main data structure is a Tree.\n",
     "- Each node represents a value query on one of the variables — e.g. “Is $x_3$ > 0.4”. If the answer is “Yes”, go right, else go left.\n",
     "- The leaf nodes are the decision nodes where a classification is made.\n",
-    "- New observations $\\mathbf{x}$ are passed from the root down to a terminal node of the tree, and then a majority vote is used to choose which class it should be assigned (Note: This vote is often implicit)."
+    "- New observations $\\mathbf{x}$ are passed from the root down to a terminal node of the tree, and then the class label is determined at the terminal node."
    ]
   },
   {
@@ -948,6 +729,7 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1013,9 +795,11 @@
     "### Metrics: Information Gain (Mutual Information)\n",
     "#### Used by the ID3, C4.5 and C5.0 tree-generation algorithms. \n",
     "  \n",
-    "$$\\text{Information Gain = Entropy(Parent) - } \\\\ \\text{ Weighted Sum of Entropy(Children)} \\\\ = IG(P,a) = H(P) - H(P|a)$$\n",
+    "**Recall** Information Gain = Entropy(Parent) -  Weighted Sum of Entropy(Children)\n",
     "\n",
-    "Where recall, $\\text{H(p)} = -\\sum \\limits_{i = 1}^{k_m} p_i \\log_2 p_i$ where the query is concerned with some feature $x_k$ and the query has $k_m$ responses."
+    "$$IG(P,a) = H(P) - H(P|a)$$\n",
+    "\n",
+    "Remember, the entropy is $\\text{H(p)} = -\\sum \\limits_{i = 1}^{k_m} p_i \\log_2 p_i$ where the query is concerned with some feature $x_k$ and the query has $k_m$ responses."
    ]
   },
   {
@@ -1039,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1056,7 +840,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1070,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -1089,7 +873,7 @@
    "source": [
     "### Answer (Continued): Final Answer\n",
     "\n",
-    "Repeating the process shown for attribute $A2$, we get that the information gain for attribute $A2 = 0.12143188346$ < the information gain for attribute $A1 = 0.2658748686$."
+    "Repeating the process shown for attribute $A2$, we get that the information gain for attribute $A2 = 0.1214$ < the information gain for attribute $A1 = 0.2658$."
    ]
   },
   {
@@ -1454,23 +1238,24 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
