--- a/handsOn_lecture10_bias-variance_tradeoff/bias_variance_handsOn.ipynb
+++ b/handsOn_lecture10_bias-variance_tradeoff/bias_variance_handsOn.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# EECS 445: Machine Learning\n",
     "\n",
@@ -29,7 +33,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### What is the bias-variance tradeoff of the  $Y$ and $Z$ for estimating the true mean of the above distribution?\n",
     "\n",
@@ -43,7 +51,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Activity 1: Bias Variance Tradeoff\n",
     "We will now see try to see the inherent tradeoff between bias and variance of estimators through linear regression. Consider the following dataset. "
@@ -162,22 +174,24 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
