edited lecture notes

--- a/handsOn_lecture10_bias-variance_tradeoff/bias_variance_handsOn.ipynb
+++ b/handsOn_lecture10_bias-variance_tradeoff/bias_variance_handsOn.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from numpy.matlib import repmat\n",
-    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "degrees = [1,2,3,4,5]\n",
     "\n",
     "\n",
@@ -116,6 +116,9 @@
     "        #create data - sample from sine wave     \n",
     "        x = np.random.random((n,1))*2*np.pi\n",
     "        y = np.sin(x) + np.random.normal(mean,std,(n,1))\n",
+    "        \n",
+    "        poly = PolynomialFeatures(degree=degree)\n",
+    "\n",
     "        \n",
     "        #TODO\n",
     "        #create features corresponding to degree - ex: 1, x, x^2, x^3...\n",
