--- a/handsOn_lecture10_bias-variance_tradeoff/draft/bias_variance_solutions.ipynb
+++ b/handsOn_lecture10_bias-variance_tradeoff/draft/bias_variance_solutions.ipynb
@@ -104,6 +104,7 @@
     "import matplotlib.pyplot as plt\n",
     "from numpy.matlib import repmat\n",
     "\n",
+    "from sklearn\n",
     "degrees = [1,2,3,4,5]\n",
     "\n",
     "\n",
