--- a/lecture11_info-theory-decision-trees/lecture11_info-theory-decision-trees.ipynb
+++ b/lecture11_info-theory-decision-trees/lecture11_info-theory-decision-trees.ipynb
@@ -435,7 +435,7 @@
     "- **Cross entropy** measures the average number of bits needed to encode messages drawn from $p$ when we use a code optimal for $q$:\n",
     "    $$\n",
     "    H(p,q) = -\\sum_{x \\in \\X} p(x) \\log q(x)\n",
-    "    = E_p[\\log q(x)]\n",
+    "    = - E_p[\\log q(x)]\n",
     "    $$\n",
     "\n",
     "- Intuitively, $H(p,q) \\geq H(p)$.  "
@@ -1241,21 +1241,21 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
