final edits to lec 12

--- a/lecture12_bagging-boosting/lecture12_bagging-boosting.ipynb
+++ b/lecture12_bagging-boosting/lecture12_bagging-boosting.ipynb
@@ -107,7 +107,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### A question to illustrate the Information Gain metric\n",
     "\n",
@@ -598,7 +602,7 @@
    "source": [
     "## Random Forests work **very** well in practice\n",
     "\n",
-    "Many ML competitions are won using some version of Random Forest. Hard to overstate the value in this algorithm on real-world problems.\n",
+    "Many ML competitions are won using some version of Random Forest. Hard to overstate the value of this algorithm on real-world problems.\n",
     "\n",
     "<img src=\"images/random_forest.png\">"
    ]
@@ -723,8 +727,8 @@
     "- Initialize: $\\mathbf{w}^{1} = (\\frac{1}{n}, ..., \\frac{1}{n})$\n",
     "- For $t = 1, ..., T$\n",
     " - $\\mathbf{w}^{t} \\rightarrow \\boxed{\\text{base learner}} \\rightarrow f_t$\n",
-    " - $\\alpha_t = \\frac{1}{2}\\text{ln}\\left(\\frac{1 - r_t}{r_t}\\right)$ where $r_t := e_{\\mathbf{w}^t}(f_t)$\n",
-    "     - Recall $e_{\\mathbf{w}}(f) := \\sum \\limits_{i = 1}^n \\mathbf{w}_i \\mathbf{1}_{\\{f(\\mathbf{x}_i) \\neq y_i\\}}$\n",
+    " - $\\alpha_t = \\frac{1}{2}\\text{ln}\\left(\\frac{1 - r_t}{r_t}\\right)$\n",
+    "     - where $r_t := e_{\\mathbf{w}^t}(f_t) = \\frac 1 n \\sum \\limits_{i = 1}^n \\mathbf{w}_i \\mathbf{1}_{\\{f(\\mathbf{x}_i) \\neq y_i\\}} $\n",
     " - $w_i^{t + 1} = \\frac{\\mathbf{w}_i^t \\exp \\left(- \\alpha_ty_if_t(\\mathbf{x}_i)\\right)}{z_t}$ where $z_t$ normalizes.\n",
     "- Output: $h_T(\\mathbf{x}) = \\text{sign}\\left(\\sum \\limits_{t = 1}^T \\alpha_t f_t(\\mathbf{x})\\right)$"
    ]
@@ -849,7 +853,7 @@
    "source": [
     "### Theorem\n",
     "(Proof in Mohri et. al, Foundations of Machine Learning, 2012)\n",
-    "- The training error of Adaboost satisfies $\\frac{1}{n} \\mathbb{1}_{\\{h_T(\\mathbf{x}_i) \\neq y_i\\}} \\leq \\exp(-2\\sum \\limits_{t = 1}^T \\gamma_t^2)$\n",
+    "- The training error of Adaboost satisfies $\\frac{1}{n} \\sum_{i=1}^n \\mathbb{1}_{\\{h_T(\\mathbf{x}_i) \\neq y_i\\}} \\leq \\exp(-2\\sum \\limits_{t = 1}^T \\gamma_t^2)$\n",
     "- In particular, if $\\forall t, \\gamma_t \\geq \\gamma > 0$ then $\\frac{1}{n} \\mathbb{1}_{\\{h_T(\\mathbf{x}_i) \\neq y_i\\}} \\leq \\exp(-2\\sum \\limits_{t = 1}^T \\gamma^2)$"
    ]
   },
@@ -936,7 +940,7 @@
    "source": [
     "### A Minimization Problem \n",
     "\n",
-    "- Consider the following problem $$\\min_{F \\in \\text{span}(\\mathscr{F})} \\frac{1}{n} \\sum \\limits_{i = 1}^n \\mathbb{1}_{\\{\\text{sign}(F(\\mathbf{x}_i) \\neq y_i\\}}$$\n",
+    "- Consider the following problem $$\\min_{F \\in \\text{span}(\\mathscr{F})} \\frac{1}{n} \\sum \\limits_{i = 1}^n \\mathbb{1}_{\\{\\text{sign}(F(\\mathbf{x}_i)) \\neq y_i\\}}$$\n",
     "\n",
     "- Now, minimizing the zero-one loss is computationally infeasible. "
    ]
