updates to handson 11

--- a/handsOn_lecture11_info-theory-decision-trees/handsOn11.ipynb
+++ b/handsOn_lecture11_info-theory-decision-trees/handsOn11.ipynb
@@ -11,20 +11,7 @@
     "# EECS 445: Machine Learning\n",
     "\n",
     "## Hands On 11: Info Theory and Decision Trees\n",
-    "\n",
-    "“Find two random variables where the KL divergence is not-symmetric” (easy)\n",
-    "\n",
-    "“Show that KL divergence is non-negative\" When is it 0?\n",
-    "\n",
-    "\"Show that mutual info is non-negative\" When is it 0?\n",
-    "\n",
-    "“Find an example of two random variables where the mutual information is 0 but the variables are not independent\"\n",
-    "\n",
-    "“Come up with a 2-attribute learning problem where a DT can correctly classify the data but a linear classifier can not\"\n",
-    "\n",
-    "“Come up with a 3-attribute learning problem where a depth-2 DT can NOT correctly classifiy the data, but a linear classifier can\"\n",
-    "\n",
-    "“Find a pair of decision stumps, and a dataset, where one stump is better on ‘classification accuracy’ but the other stump is better on ‘information gain’\"\n"
+    "\n"
    ]
   },
   {
@@ -36,7 +23,7 @@
     }
    },
    "source": [
-    "Prove that the KL divergence is non negative.\n"
+    "Prove that the KL divergence $KL(p,q)$ for any distributions $p,q$ is non negative.\n"
    ]
   },
   {
@@ -84,13 +71,16 @@
    },
    "source": [
     "Prove that \n",
-    "$$I(X,Y) = H(X)$$ if $Y$ is a determinisitc, one-to-one function."
+    "$$I(X,Y) = H(X)$$ if $Y$ is a determinisitc, one-to-one function of $X$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "## Decision trees vs linear models\n",
@@ -109,7 +99,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -126,7 +119,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Trees can fit XOR\n",
     "\n",
@@ -137,7 +134,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +156,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [
     {
@@ -206,7 +209,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [
     {
@@ -255,7 +261,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## When a linear models beat a decision tree\n",
     "\n",
@@ -266,7 +276,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -295,7 +308,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Depth matters\n",
     "\n",
@@ -306,7 +323,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -342,7 +362,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
