editing files from lec 12

--- a/handsOn_lecture11_info-theory-decision-trees/handsOn11.ipynb
+++ b/handsOn_lecture11_info-theory-decision-trees/handsOn11.ipynb
@@ -45,7 +45,11 @@
     }
    },
    "source": [
-    "Prove that two random variables $X$ and $Y$ are independent if and only if $I(X,Y) = 0$."
+    "Prove that two random variables $X$ and $Y$ are independent if and only if $I(X,Y) = 0$ where $I$ is the mutual information.\n",
+    "\n",
+    "*Hint*: In the last problem, we almost proved\n",
+    "$$KL(p,q) = 0 \\iff p = q$$\n",
+    "but we swear it's true"
    ]
   },
   {
@@ -194,7 +198,7 @@
     }
    ],
    "source": [
-    "lr = LogisticRegression()\n",
+    "lr = LogisticRegression(C=100000)\n",
     "\n",
     "for label, y in [('and', y_and), ('xor', y_xor)]:\n",
     "    lr.fit(X, y)\n",
