--- a/lecture12_bagging-boosting/lecture12_bagging-boosting.ipynb
+++ b/lecture12_bagging-boosting/lecture12_bagging-boosting.ipynb
@@ -71,7 +71,8 @@
     "- Come to the section in which *you are enrolled*\n",
     "- You can bring notes, no more than 3 pieces of paper (double sided)\n",
     "- Bring an ID. No calculators allowed\n",
-    "- Topics: lectures 1-11, see Piazza post for details"
+    "- Topics: lectures 1-11, see Piazza post for details\n",
+    "- Note: **No Lecture on Wednesday October 26**"
    ]
   },
   {
@@ -663,7 +664,7 @@
     "\n",
     "- Assume class labels are -1 and +1.\n",
     "- The final classifier then has the form: \n",
-    " - $h_T(\\mathbf{x}) = \\text{sgn}\\left(\\sum \\limits_{t = 1}^T \\alpha_t f_T(\\mathbf{x})\\right)$ where $f_1, ..., f_T$ are called base (or weak) classifiers and $\\alpha_1, ..., \\alpha_T > 0$ reflect the confidence of the various base classifiers."
+    " - $h_T(\\mathbf{x}) = \\text{sgn}\\left(\\sum \\limits_{t = 1}^T \\alpha_t f_t(\\mathbf{x})\\right)$ where $f_1, ..., f_T$ are called base (or weak) classifiers and $\\alpha_1, ..., \\alpha_T > 0$ reflect the confidence of the various base classifiers."
    ]
   },
   {
