clarification in note about scaling datasets

--- a/handsOn_lecture13_error-measures-and-ml-advice/handsOn13_error-measures-and-ml-advice.ipynb
+++ b/handsOn_lecture13_error-measures-and-ml-advice/handsOn13_error-measures-and-ml-advice.ipynb
@@ -172,7 +172,7 @@
    "source": [
     "Notice how we plot the standard deviation too; in addition to seeing whether the training and test accuracy converge we can see how much variation exists across the k-folds of the training runs with each sample size. This variance can in itself help us determine whether or not our model suffers from variance.\n",
     "\n",
-    "Also: a quick note on [pipelines](http://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html): they are a handy way to package preprocessing steps into an object that adheres to the fit/transform/predict paradigm of scikit-learn. Most linear models require that the data is scaled, so we use the [StandardScaler](http://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html) pipeline step. Tree based models do not require scaling.\n",
+    "Also: a quick note on [pipelines](http://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html): they are a handy way to package preprocessing steps into an object that adheres to the fit/transform/predict paradigm of scikit-learn. Most linear models require that the data is scaled, so we use the [StandardScaler](http://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html) pipeline step. Tree based models do not require a scaled dataset.\n",
     "\n",
     "**Q**: How would you characterize the bias and variance of the logistic regression model?\n",
     "\n",
