changes to lec13

--- a/lecture13_error-measures-and-ml-advice/lecture13_error-measures-and-ml-advice.ipynb
+++ b/lecture13_error-measures-and-ml-advice/lecture13_error-measures-and-ml-advice.ipynb
@@ -233,8 +233,7 @@
     }
    },
    "source": [
-    "## Break time!\n",
-    "<img src=\"https://img.buzzfeed.com/buzzfeed-static/static/2013-10/enhanced/webdr01/15/9/anigif_enhanced-buzz-31540-1381844535-8.gif\"/>"
+    "# ML Advice"
    ]
   },
   {
@@ -819,6 +818,19 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(filename='images/azure_sheet.png', width=800, height=600) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Break Time!\n",
+    "\n",
+    "<img src=\"https://img.buzzfeed.com/buzzfeed-static/static/2013-10/enhanced/webdr01/15/9/anigif_enhanced-buzz-31540-1381844535-8.gif\"/>"
    ]
   },
   {
